--- a/Price/Price.csproj
+++ b/Price/Price.csproj
@@ -41,7 +41,7 @@
   <ItemGroup>
     <Compile Include="PricePolicy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Terms.cs" />
+    <Compile Include="RentalTerms.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VideoStore\VideoStore.csproj">
